--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"build": "prisma migrate deploy && next build",
+		"build": "prisma db push && next build",
 		"dev": "next dev",
 		"postinstall": "prisma generate",
 		"lint": "next lint",
