--- a/package.json
+++ b/package.json
@@ -68,5 +68,6 @@
 	},
 	"ct3aMetadata": {
 		"initVersion": "6.8.0"
-	}
+	},
+	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
