--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"framer-motion": "^7.6.5",
 		"jotai": "^1.9.2",
 		"jsonwebtoken": "^8.5.1",
+		"lucide-react": "^0.469.0",
 		"nanoid": "^4.0.0",
 		"next": "13.0.2",
 		"next-seo": "^5.14.1",
