--- a/package.json
+++ b/package.json
@@ -1,74 +1,76 @@
 {
-	"name": "@codemeapixel/athing",
+	"name": "@thingspace/athing",
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"build": "prisma db push && next build",
-		"dev": "next dev",
 		"postinstall": "prisma generate",
-		"lint": "next lint",
-		"start": "next start",
 		"dev:generate": "prisma generate",
 		"dev:migrate": "prisma migrate dev --name postgres-init",
-		"dev:studio": "prisma studio"
+		"dev:studio": "prisma studio",
+		"dev:push": "prisma db push",
+		"format": "prettier --write .",
+		"dev": "next dev --turbo",
+		"lint": "next lint",
+		"build": "prisma db push && next build"
 	},
 	"dependencies": {
-		"@hcaptcha/react-hcaptcha": "^1.4.4",
-		"@prisma/client": "^4.5.0",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.8",
-		"@tanstack/react-query": "^4.10.0",
-		"@trpc/client": "10.0.0-rc.4",
-		"@trpc/next": "10.0.0-rc.4",
-		"@trpc/react-query": "10.0.0-rc.4",
-		"@trpc/server": "10.0.0-rc.4",
-		"@zxcvbn-ts/core": "^2.1.0",
-		"@zxcvbn-ts/language-common": "^2.0.1",
-		"@zxcvbn-ts/language-en": "^2.1.0",
-		"bcrypt": "^5.1.0",
-		"class-variance-authority": "^0.3.0",
-		"formik": "^2.2.9",
-		"framer-motion": "^7.6.5",
-		"jotai": "^1.9.2",
-		"jsonwebtoken": "^8.5.1",
-		"lucide-react": "^0.469.0",
-		"nanoid": "^4.0.0",
-		"next": "13.0.2",
-		"next-seo": "^5.14.1",
+		"@hcaptcha/react-hcaptcha": "^1.12.0",
+		"@prisma/client": "^6.8.2",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
+		"@tanstack/react-query-devtools": "^5.76.2",
+		"@trpc/client": "^11.4.2",
+		"@trpc/next": "^11.4.2",
+		"@trpc/react-query": "^11.4.2",
+		"@trpc/server": "^11.4.2",
+		"@zxcvbn-ts/core": "^3.0.4",
+		"@zxcvbn-ts/language-common": "^3.0.4",
+		"@zxcvbn-ts/language-en": "^3.0.2",
+		"bcrypt": "^6.0.0",
+		"class-variance-authority": "^0.7.1",
+		"formik": "^2.4.6",
+		"framer-motion": "^12.12.1",
+		"jotai": "^2.12.5",
+		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.511.0",
+		"nanoid": "^5.1.5",
+		"next": "15.3.2",
 		"nookies": "^2.5.2",
-		"rate-limiter-flexible": "^2.4.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.6.0",
-		"react-indiana-drag-scroll": "^2.2.0",
-		"react-textarea-autosize": "^8.4.0",
-		"superjson": "1.9.1",
-		"zod": "^3.18.0",
-		"zod-formik-adapter": "^1.1.1"
+		"rate-limiter-flexible": "^7.1.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0",
+		"react-indiana-drag-scroll": "^2.2.1",
+		"react-multi-carousel": "^2.8.6",
+		"react-textarea-autosize": "^8.5.9",
+		"recharts": "^2.15.3",
+		"superjson": "^2.2.2",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.4",
+		"zod-formik-adapter": "^1.3.0"
 	},
 	"devDependencies": {
-		"@next/bundle-analyzer": "^13.0.5",
-		"@tanstack/react-query-devtools": "^4.16.1",
-		"@types/bcrypt": "^5.0.0",
-		"@types/cookie": "^0.5.1",
-		"@types/jsonwebtoken": "^8.5.9",
-		"@types/node": "^18.0.0",
-		"@types/react": "^18.0.14",
-		"@types/react-dom": "^18.0.5",
-		"@typescript-eslint/eslint-plugin": "^5.33.0",
-		"@typescript-eslint/parser": "^5.33.0",
-		"autoprefixer": "^10.4.7",
-		"eslint": "^8.26.0",
-		"eslint-config-next": "13.0.2",
-		"postcss": "^8.4.14",
-		"prettier": "^2.7.1",
-		"prettier-plugin-tailwindcss": "^0.1.13",
-		"prisma": "^4.5.0",
-		"tailwindcss": "^3.2.0",
-		"typescript": "^4.8.4"
+		"@types/bcrypt": "^5.0.2",
+		"@types/cookie": "^1.0.0",
+		"@types/jsonwebtoken": "^9.0.10",
+		"@types/node": "^20.11.30",
+		"@types/nodemailer": "^6.4.17",
+		"@types/react": "^18.2.78",
+		"@types/react-dom": "^18.2.22",
+		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/parser": "^8.34.1",
+		"autoprefixer": "^10.4.21",
+		"eslint": "^9.29.0",
+		"eslint-config-next": "^15.3.4",
+		"postcss": "^8.4.38",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.6.12",
+		"prisma": "^6.10.1",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.4.5"
 	},
-	"ct3aMetadata": {
-		"initVersion": "6.8.0"
-	},
-	"packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+	"trustedDependencies": [
+		"core-js"
+	]
 }
