--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"class-variance-authority": "^0.7.1",
 		"formik": "^2.4.6",
 		"framer-motion": "^12.12.1",
+		"jose": "^6.0.11",
 		"jotai": "^2.12.5",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.511.0",
