--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-	"name": "@thingspace/athing",
+	"name": "@thingspace/thingtalk",
+	"description": "A safe, AI-powered space for mental health support and self-expression.",
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"postinstall": "prisma generate",
-		"dev:generate": "prisma generate",
-		"dev:migrate": "prisma migrate dev --name postgres-init",
-		"dev:studio": "prisma studio",
-		"dev:push": "prisma db push",
 		"format": "prettier --write .",
+		"start": "next start",
 		"dev": "next dev --turbo",
 		"lint": "next lint",
-		"build": "prisma db push && next build"
+		"build": "next build"
 	},
 	"dependencies": {
 		"@hcaptcha/react-hcaptcha": "^1.12.0",
@@ -37,14 +35,17 @@
 		"nanoid": "^5.1.5",
 		"next": "15.3.2",
 		"nookies": "^2.5.2",
+		"openai": "^4.89.1",
 		"rate-limiter-flexible": "^7.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
+		"react-markdown": "^10.1.0",
 		"react-indiana-drag-scroll": "^2.2.1",
 		"react-multi-carousel": "^2.8.6",
 		"react-textarea-autosize": "^8.5.9",
 		"recharts": "^2.15.3",
+		"remark-gfm": "^4.0.0",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.3.0",
 		"tailwindcss-animate": "^1.0.7",
