feat(add): UPDATED READMEE

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,15 @@
 			}
 		]
 	},
-	"include": ["**/*.cjs", "**/*.mjs", "**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
-	"exclude": ["node_modules"]
+	"include": [
+		"**/*.cjs", 
+		"**/*.mjs", 
+		"**/*.ts", 
+		"**/*.tsx", 
+		"next-env.d.ts", 
+		".next/types/**/*.ts"
+	],
+	"exclude": [
+		"node_modules"
+	]
 }
